fixed index video on mobile

--- a/page-components/Index/Video/_video.module.scss
+++ b/page-components/Index/Video/_video.module.scss
@@ -1,3 +1,7 @@
 .videoWrapper {
   height: 500vh;
+
+  &__video {
+    clip-path: inset(0px 3px);
+  }
 }
